Fixed socials and tooltips not aligning properly

--- a/home/index.css
+++ b/home/index.css
@@ -239,12 +239,18 @@ socialitem
 {
     margin-left: 0.1vw;
     position: relative;
-    transition: 0.25s;
     top: 0;
     cursor: pointer;
 }
 
-socialitem:hover
+socialitem img
+{
+    top: 0;
+    position: relative;
+    transition: 0.25s;
+}
+
+socialitem:hover img
 {
     top: -1vh;
 }
